<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="520dp"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/memoryInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_input"
            android:hint="@string/memory_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="2"
            android:paddingHorizontal="12dp"
            android:textColor="#EFFAF4"
            android:textColorHint="#657A6E"
            android:textSize="13sp"/>

        <Button
            android:id="@+id/addMemory"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:text="@string/action_remember"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memoryRecycler"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="9dp"
        android:clipToPadding="false"/>

    <Button
        android:id="@+id/clearMemories"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/action_clear_memories"/>
</LinearLayout>
